...
                ),
              ),
          },
        ),
      ),
      floatingActionButton: FloatingActionButton(
        key: const Key('add_transaction_fab'),
        onPressed: () {
          Get.toNamed(AppRoutes.addTransaction)?.then(
            (value) {
              Get.find<GetTransactionsController>().loadTransactions();
            },
          );
...
